# lightcurvedb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
lightcurvedb/: __init__.py  config.py  sync.py
lightcurvedb/analysis/: aggregates.py  statistics.py
lightcurvedb/cli/: ephemeral.py  setup.py  socat.py
lightcurvedb/client/: band.py  core.py  cutouts.py  feed.py  lightcurve.py  measurement.py  source.py
lightcurvedb/core/: __init__.py  connectionsetting.py
lightcurvedb/integrations/: socat.py
lightcurvedb/models/: __init__.py  analysis.py  band.py  cutout.py  exceptions.py  feed.py  flux.py  instrument.py  json.py  lightcurves.py  responses.py  source.py  statistics.py
lightcurvedb/models/lightcurves/: __init__.py  frequency.py  instrument.py  source.py
lightcurvedb/protocols/: __init__.py  storage.py
lightcurvedb/simulation/: __init__.py  cutouts.py  fluxes.py  sources.py
lightcurvedb/storage/: __init__.py
lightcurvedb/storage/base/: __init__.py  schema.py
lightcurvedb/storage/pandas/: analysis.py  backend.py  flux.py  lightcurves.py
lightcurvedb/storage/parquet/: analysis.py  backend.py  cutout.py  flux.py  instrument.py  lightcurves.py  source.py
lightcurvedb/storage/postgres/: __init__.py  analysis.py  backend.py  band.py  cutout.py  flux.py  instrument.py  lightcurves.py  pooler.py  schema.py  source.py
lightcurvedb/storage/prototype/: analysis.py  backend.py  band.py  cutout.py  flux.py  instrument.py  lightcurves.py  source.py
lightcurvedb/storage/timescale/: backend.py  cutout.py  flux.py  lightcurves.py  schema.py
tests/: conftest.py
tests/test_backend/: test_analysis.py  test_cutout.py  test_feed.py  test_ingest_dataframe.py  test_instrument.py  test_measurement.py  test_source.py
tests/test_client/: test_band.py  test_cutout.py  test_feed.py  test_instrument.py  test_lightcurve.py  test_measurement.py  test_source.py  test_statistics.py
tests/test_integrations/: test_socat.py
